
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int stderr ;

__attribute__((used)) static void check_oom(void *x){
  if( x==0 ){
    fprintf(stderr, "out of memory\n");
    exit(1);
  }
}
